# cpp_calculate_multiplication_of_2_matrix

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  calculate_multiplication_of_2_matrix.cpp  g.sh  helper_function_matrix.cpp  helper_function_matrix.h  main.cpp  makefile  multiplication_of_2_matrix.cpp  multiplication_of_2_matrix.h  multiply_2_matrix.cpp  run_test.sh  run_test_0_matrix_multiplication copy.sh  run_test_1_matrix_multiplication.sh  run_test_2_matrix_multiplication.sh
app/: CMakeLists.txt  main.cpp
build_script/: build.sh  build_with_remove.sh
lib/helper_function_matrix/: CMakeLists.txt  helper_function_matrix.cpp  helper_function_matrix.h
lib/multiply_2_matrix/: CMakeLists.txt  multiply_2_matrix.cpp  multiply_2_matrix.h
multiply_2_matrix/: CMakeLists.txt  build_so.sh  build_so_and_install_lib.sh
multiply_2_matrix/include/: multiply_2_matrix.h
multiply_2_matrix/src/: multiply_2_matrix.cpp
test_sh/: _base.sh  run_test.sh  run_test_2_matrix_in_diffrence_size.sh  run_test_both_matrix_in_2000_size.sh  run_test_both_matrix_in_same_size.sh  run_test_hello_world.sh
